--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab1",
+  "name": "node_express",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -17,8 +17,8 @@
     "chai": "^5.1.1",
     "colors": "^1.4.0",
     "express": "^4.19.2",
-    "lab1": "file:",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "node_express": "file:"
   },
   "devDependencies": {
     "mocha": "^10.7.3",
