--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^5.0.0",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^6.8.0",
     "node_express": "file:"
   },
